force-app/main/default/objects/Account/fields/AgencyAttributes__c.field-meta.xml
<CustomField>
    <fullName>AgencyAttributes__c</fullName>
    <label>代理店属性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3者間・統括</fullName>
            </value>
            <value>
                <fullName>3者間・統括（計上要）</fullName>
            </value>
            <value>
                <fullName>3者間・統括（管理用）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>