force-app/main/default/objects/Account/fields/AgencyCode__c.field-meta.xml
<CustomField>
    <fullName>AgencyCode__c</fullName>
    <label>代理店コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>