force-app/main/default/objects/Account/fields/AgencyNameKana__c.field-meta.xml
<CustomField>
    <fullName>AgencyNameKana__c</fullName>
    <label>代理店カナ</label>
    <length>80</length>
    <type>Text</type>
</CustomField>