force-app/main/default/objects/Account/fields/AgencyRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>AgencyRegistrationNumber__c</fullName>
    <label>代理店登録番号</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>