force-app/main/default/objects/Account/fields/AvailabilityHawkerAgreements__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityHawkerAgreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>通販特約有無</label>
    <type>Checkbox</type>
</CustomField>