force-app/main/default/objects/Account/fields/BusinessStoreCode_NumericalFormula__c.field-meta.xml
<CustomField>
    <fullName>BusinessStoreCode_NumericalFormula__c</fullName>
    <formula>SalesBranchName__r.JurisdictionalStoreCode__c</formula>
    <label>営業店コード</label>
    <type>Text</type>
</CustomField>