force-app/main/default/objects/Account/fields/BySpecialty__c.field-meta.xml
<CustomField>
    <fullName>BySpecialty__c</fullName>
    <label>専乗別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>専属</fullName>
            </value>
            <value>
                <fullName>自社申請</fullName>
            </value>
            <value>
                <fullName>他社申請</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>