force-app/main/default/objects/Account/fields/ChannelOperatingCode__c.field-meta.xml
<CustomField>
    <fullName>ChannelOperatingCode__c</fullName>
    <label>チャネル営推用コード</label>
    <length>2</length>
    <type>Text</type>
</CustomField>