force-app/main/default/objects/Account/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>個人取引先責任者ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>