force-app/main/default/objects/Account/fields/Contactperson_mailaddressnumber__c.field-meta.xml
<CustomField>
    <fullName>Contactperson_mailaddressnumber__c</fullName>
    <label>担当者メールアドレス番号</label>
    <length>6</length>
    <type>Text</type>
</CustomField>