force-app/main/default/objects/Account/fields/CounterpartCode__c.field-meta.xml
<CustomField>
    <fullName>CounterpartCode__c</fullName>
    <label>代理店コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>