force-app/main/default/objects/Account/fields/CounterpartyCode__c.field-meta.xml
<CustomField>
    <fullName>CounterpartyCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>相手先コード</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>