force-app/main/default/objects/Account/fields/CounterpartyName_del__c.field-meta.xml
<CustomField>
    <fullName>CounterpartyName_del__c</fullName>
    <label>相手先名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>