force-app/main/default/objects/Account/fields/CounterpartyName_Kana__c.field-meta.xml
<CustomField>
    <fullName>CounterpartyName_Kana__c</fullName>
    <label>相手先名カナ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>