force-app/main/default/objects/Account/fields/DaisapoManagement__c.field-meta.xml
<CustomField>
    <fullName>DaisapoManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店サポートコールデータ管理用項目</label>
    <referenceTo>DairitenSaport_CallData__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>DaisapoManage</relationshipName>
    <type>Lookup</type>
</CustomField>