force-app/main/default/objects/Account/fields/DeletedState__c.field-meta.xml
<CustomField>
    <fullName>DeletedState__c</fullName>
    <formula>IF(ObsolescentDate__c =today(),true,false)</formula>
    <label>削除状態</label>
    <type>Checkbox</type>
</CustomField>