force-app/main/default/objects/Account/fields/DepartmentCode__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCode__c</fullName>
    <label>部署コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>