force-app/main/default/objects/Account/fields/DepartmentName__c.field-meta.xml
<CustomField>
    <fullName>DepartmentName__c</fullName>
    <label>部署名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>