force-app/main/default/objects/Account/fields/DepartmentNameKana__c.field-meta.xml
<CustomField>
    <fullName>DepartmentNameKana__c</fullName>
    <label>部署名カナ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>