force-app/main/default/objects/Account/fields/DepartmentNumber__c.field-meta.xml
<CustomField>
    <fullName>DepartmentNumber__c</fullName>
    <label>部署番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>