force-app/main/default/objects/Account/fields/DepartmentType__c.field-meta.xml
<CustomField>
    <fullName>DepartmentType__c</fullName>
    <label>部署タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>部署タイプA</fullName>
            </value>
            <value>
                <fullName>部署タイプB</fullName>
            </value>
            <value>
                <fullName>部署タイプC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>