force-app/main/default/objects/Account/fields/DestinationNumber__c.field-meta.xml
<CustomField>
    <fullName>DestinationNumber__c</fullName>
    <label>相手先番号</label>
    <type>Phone</type>
</CustomField>