force-app/main/default/objects/Account/fields/DirectSettlement__c.field-meta.xml
<CustomField>
    <fullName>DirectSettlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>直接精算有</label>
    <type>Checkbox</type>
</CustomField>