force-app/main/default/objects/Account/fields/DirectSettlement_EndDate__c.field-meta.xml
<CustomField>
    <fullName>DirectSettlement_EndDate__c</fullName>
    <label>直接精算の終了日</label>
    <type>Date</type>
</CustomField>