force-app/main/default/objects/Account/fields/DirectSettlement_StartingDay__c.field-meta.xml
<CustomField>
    <fullName>DirectSettlement_StartingDay__c</fullName>
    <label>直接精算の開始日</label>
    <type>Date</type>
</CustomField>