force-app/main/default/objects/Account/fields/displayClosedStore__c.field-meta.xml
<CustomField>
    <fullName>displayClosedStore__c</fullName>
    <formula>If( Or(IsNull(ObsolescentDate__c  )  ,ObsolescentDate__c  &gt; today() ),
&quot;&quot;,
IMAGE(&apos;/resource/ClosedStore&apos;,&apos;廃止&apos; )
)</formula>
    <label>廃止</label>
    <type>Text</type>
</CustomField>