force-app/main/default/objects/Account/fields/EmailAddressAllowed__c.field-meta.xml
<CustomField>
    <fullName>EmailAddressAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>メールアドレス許可</label>
    <type>Checkbox</type>
</CustomField>