force-app/main/default/objects/Account/fields/EmailAttributes__c.field-meta.xml
<CustomField>
    <fullName>EmailAttributes__c</fullName>
    <label>メールアドレス属性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>属性1</fullName>
            </value>
            <value>
                <fullName>属性2</fullName>
            </value>
            <value>
                <fullName>属性3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>