force-app/main/default/objects/Account/fields/FAXnumber__c.field-meta.xml
<CustomField>
    <fullName>FAXnumber__c</fullName>
    <label>FAX番号</label>
    <type>Phone</type>
</CustomField>