force-app/main/default/objects/Account/fields/FAXNumberAttributes__c.field-meta.xml
<CustomField>
    <fullName>FAXNumberAttributes__c</fullName>
    <label>FAX番号属性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAX属性1</fullName>
            </value>
            <value>
                <fullName>FAX属性2</fullName>
            </value>
            <value>
                <fullName>FAX属性3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>