force-app/main/default/objects/Account/fields/FAXNumberPermitted__c.field-meta.xml
<CustomField>
    <fullName>FAXNumberPermitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAX番号許可</label>
    <type>Checkbox</type>
</CustomField>