force-app/main/default/objects/Account/fields/FinServ__ClaimsOnHouseholdPolicies__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ClaimsOnHouseholdPolicies__c</fullName>
    <description>The total number of claims that were ever raised for the policies currently owned by the policyholder&apos;s primary household.</description>
    <inlineHelpText>関連する契約が有効である限り、解決済みの請求を含むすべての請求 (その請求の現在の状況に関係なく) が含まれます。</inlineHelpText>
    <label>Claims on Household Policies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>