force-app/main/default/objects/Account/fields/FinServ__HouseholdPolicies__c.field-meta.xml
<CustomField>
    <fullName>FinServ__HouseholdPolicies__c</fullName>
    <description>The total number of policies currently owned by the policyholder&apos;s primary household.</description>
    <inlineHelpText>世帯のメンバーが所有する契約の件数。たとえば、Rachel Adam の主世帯に Rachel を含めて 3 名のメンバーが存在し、各人が 2 つの契約を所有している場合、この項目には値 6 が表示されます。</inlineHelpText>
    <label>Household Policies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>