force-app/main/default/objects/Account/fields/FinServ__TotalHouseholdPremiums__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TotalHouseholdPremiums__c</fullName>
    <description>Total premiums for all the policies currently owned by the policyholder&apos;s primary household.</description>
    <inlineHelpText>世帯が現在所有するすべての有効な契約の総計上収入保険料 (GWP) の合計。</inlineHelpText>
    <label>Total Household Premiums</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>