force-app/main/default/objects/Account/fields/FukokuBranchCode__c.field-meta.xml
<CustomField>
    <fullName>FukokuBranchCode__c</fullName>
    <label>富国支社コード</label>
    <length>6</length>
    <type>Text</type>
</CustomField>