force-app/main/default/objects/Account/fields/internalCode__c.field-meta.xml
<CustomField>
    <fullName>internalCode__c</fullName>
    <label>インターナルコード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>