force-app/main/default/objects/Account/fields/InternalMemo__c.field-meta.xml
<CustomField>
    <fullName>InternalMemo__c</fullName>
    <label>社内メモ欄</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>