force-app/main/default/objects/Account/fields/InternalMemo_AssistLine_2__c.field-meta.xml
<CustomField>
    <fullName>InternalMemo_AssistLine_2__c</fullName>
    <label>社内メモ欄（アシストライン）２</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>