force-app/main/default/objects/Account/fields/JurisdictionalStoreCode__c.field-meta.xml
<CustomField>
    <fullName>JurisdictionalStoreCode__c</fullName>
    <externalId>true</externalId>
    <label>営業店コード</label>
    <length>5</length>
    <type>Text</type>
</CustomField>