force-app/main/default/objects/Account/fields/NoBlockedCalls_PhoneNumbersRegist__c.field-meta.xml
<CustomField>
    <fullName>NoBlockedCalls_PhoneNumbersRegist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>非通知・電話番号登録なし</label>
    <type>Checkbox</type>
</CustomField>