force-app/main/default/objects/Account/fields/Non_RenewalTarget__c.field-meta.xml
<CustomField>
    <fullName>Non_RenewalTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新不可対象</label>
    <type>Checkbox</type>
</CustomField>