force-app/main/default/objects/Account/fields/ObsolescentDate__c.field-meta.xml
<CustomField>
    <fullName>ObsolescentDate__c</fullName>
    <label>廃止日</label>
    <type>Date</type>
</CustomField>