force-app/main/default/objects/Account/fields/OnlineEdit__c.field-meta.xml
<CustomField>
    <fullName>OnlineEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>オンライン編集（可否）</label>
    <type>Checkbox</type>
</CustomField>