force-app/main/default/objects/Account/fields/OnlinePayment__c.field-meta.xml
<CustomField>
    <fullName>OnlinePayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ネット精算有</label>
    <type>Checkbox</type>
</CustomField>