force-app/main/default/objects/Account/fields/OurRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>OurRegistrationDate__c</fullName>
    <label>当社登録日</label>
    <type>Date</type>
</CustomField>