force-app/main/default/objects/Account/fields/PhoneNumberAttributes__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumberAttributes__c</fullName>
    <label>電話番号属性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電話属性1</fullName>
            </value>
            <value>
                <fullName>電話属性2</fullName>
            </value>
            <value>
                <fullName>電話属性3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>