force-app/main/default/objects/Account/fields/Pre_Indication__c.field-meta.xml
<CustomField>
    <fullName>Pre_Indication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>プレ表示有</label>
    <type>Checkbox</type>
</CustomField>