force-app/main/default/objects/Account/fields/RegisteredAgentDepartment__c.field-meta.xml
<CustomField>
    <fullName>RegisteredAgentDepartment__c</fullName>
    <label>登録担当者部署番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>