force-app/main/default/objects/Account/fields/RegisteredContactPerson__c.field-meta.xml
<CustomField>
    <fullName>RegisteredContactPerson__c</fullName>
    <label>登録担当者番号</label>
    <length>15</length>
    <type>Text</type>
</CustomField>