force-app/main/default/objects/Account/fields/SalesBranchName__c.field-meta.xml
<CustomField>
    <fullName>SalesBranchName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>営業店名</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>営業店</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>代理店</relationshipLabel>
    <relationshipName>SalesBranchName_relation</relationshipName>
    <type>Lookup</type>
</CustomField>