force-app/main/default/objects/Account/fields/SalesBranchTelNumber_Formula__c.field-meta.xml
<CustomField>
    <fullName>SalesBranchTelNumber_Formula__c</fullName>
    <formula>SalesBranchName__r.DestinationNumber__c</formula>
    <label>営業店電話番号</label>
    <type>Text</type>
</CustomField>