force-app/main/default/objects/Account/fields/SalesRepresentative__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentative__c</fullName>
    <label>営業担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>