force-app/main/default/objects/Account/fields/Telephonenumberofthesalesbranch__c.field-meta.xml
<CustomField>
    <fullName>Telephonenumberofthesalesbranch__c</fullName>
    <label>営業店電話番号</label>
    <type>Phone</type>
</CustomField>