force-app/main/default/objects/Account/fields/UnionMemberEmployeeCode__c.field-meta.xml
<CustomField>
    <fullName>UnionMemberEmployeeCode__c</fullName>
    <label>組合員（社員）コード</label>
    <length>20</length>
    <type>Text</type>
</CustomField>