force-app/main/default/objects/Account/recordTypes/PostOffice.recordType-meta.xml
<RecordType>
    <fullName>PostOffice</fullName>
    <active>true</active>
    <label>郵便局</label>
</RecordType>