force-app/main/default/objects/Account/recordTypes/SalesOffice.recordType-meta.xml
<RecordType>
    <fullName>SalesOffice</fullName>
    <active>true</active>
    <label>営業店</label>
</RecordType>