force-app/main/default/objects/Account/validationRules/CannotCreatedRecTypeForSalesOffice.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotCreatedRecTypeForSalesOffice</fullName>
    <active>true</active>
    <description>実行ユーザのプロファイルがカスタマーOP、SV、CLのいずれかでは、レコードタイプ「営業店」を新規作成できない</description>
    <errorConditionFormula>AND(
ISNEW(),
RecordType.DeveloperName = &apos;SalesOffice&apos;,
OR(
$Profile.Id = $Label.CustomerCLProfileID,
$Profile.Id = $Label.CustomerSVProfileID,
$Profile.Id = $Label.CustomerOPProfileID
)
)</errorConditionFormula>
    <errorMessage>営業店の手作成はできません</errorMessage>
</ValidationRule>