force-app/main/default/objects/Account/validationRules/CantUpdateWhenNon_RenewalTargetIsTrue.validationRule-meta.xml
<ValidationRule>
    <fullName>CantUpdateWhenNon_RenewalTargetIsTrue</fullName>
    <active>true</active>
    <errorConditionFormula>And(Non_RenewalTarget__c = true,
not(ischanged(Non_RenewalTarget__c)))</errorConditionFormula>
    <errorMessage>更新不可対象がオンの時には、更新できません</errorMessage>
</ValidationRule>