force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CounterpartyCode__c</columns>
    <columns>BusinessStoreCode_NumericalFormula__c</columns>
    <columns>DestinationNumber__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>displayClosedStore__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Agent,Account.SalesOffice,Account.PostOffice</value>
    </filters>
    <label>すべての代理店・営業店情報</label>
</ListView>