force-app/main/default/objects/Account/listViews/AllDairiten.listView-meta.xml
<ListView>
    <fullName>AllDairiten</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CounterpartyName_Kana__c</columns>
    <columns>CounterpartyCode__c</columns>
    <columns>DestinationNumber__c</columns>
    <columns>displayClosedStore__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Agent</value>
    </filters>
    <label>すべての代理店</label>
</ListView>