force-app/main/default/objects/Account/listViews/AllEigyoten.listView-meta.xml
<ListView>
    <fullName>AllEigyoten</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>JurisdictionalStoreCode__c</columns>
    <columns>DestinationNumber__c</columns>
    <columns>Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.SalesOffice</value>
    </filters>
    <label>すべての営業店</label>
</ListView>